# DutyFlow

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENT_BASE_TECH_NOTES.md  Dockerfile  PLANS.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  test.md
codex_skills/dutyflow-chat-debug-workflow/: SKILL.md
codex_skills/dutyflow-internal-tool-workflow/: SKILL.md
docs/: ARCHITECTURE.md  CODE_STYLE.md  DATA_MODEL.md  TESTING.md
test/: identity_fixture_data.py  test_agent_cli_tools.py  test_agent_control_state_store.py  test_agent_executor.py  test_agent_hooks.py  test_agent_loop.py  test_agent_permissions.py  test_agent_recovery.py  test_agent_registry.py  test_agent_router.py  test_agent_skills.py  test_agent_state.py  test_agent_tools.py  test_app_entry.py  test_approval_card_action.py  test_approval_flow.py  test_approval_request_tools.py  test_approval_resume_tools.py  test_audit_log.py  test_background_subagent_chain.py  test_background_subagent_executor.py  test_background_task_tools.py  test_background_task_worker.py  test_cli_chat.py  test_cli_context_commands.py  test_contact_knowledge_tools.py  test_context_budget.py  test_context_compression_journal.py  test_context_evidence_store.py  test_context_health_check.py  test_context_overflow_recovery.py  test_context_ref_tools.py  test_debug_chat_service.py  test_env_config.py  test_feedback_gateway.py  test_feishu_ambient_analysis_intake.py  test_feishu_ambient_context.py  test_feishu_client.py  test_feishu_collector_budget.py  test_feishu_direct_message_collector.py  (+37 more)
(+187 files in other folders)
